--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi==0.109.0
+uvicorn==0.27.0
 python-dotenv==1.0.0
-pydantic==2.5.2
+pydantic==2.5.3
 beautifulsoup4==4.12.2
 requests==2.31.0
 aiohttp==3.9.1
@@ -11,4 +11,5 @@ chromadb==0.4.22
 cryptography==41.0.7
 google-generativeai==0.3.1
 python-multipart==0.0.6
-typing-extensions==4.8.0 
+typing-extensions==4.9.0
+starlette==0.36.3 
